--- a/package.json
+++ b/package.json
@@ -39,6 +39,12 @@
 		"css-minimizer-webpack-plugin": "^6.0.0",
 		"html-loader": "^5.0.0",
 		"html-webpack-plugin": "^5.6.0",
+		"image-minimizer-webpack-plugin": "^4.0.0",
+		"imagemin": "^8.0.1",
+		"imagemin-gifsicle": "^7.0.0",
+		"imagemin-jpegtran": "^7.0.0",
+		"imagemin-optipng": "^8.0.0",
+		"imagemin-svgo": "^10.0.1",
 		"mini-css-extract-plugin": "^2.8.1",
 		"postcss": "^8.4.38",
 		"postcss-import": "^16.1.0",
@@ -47,6 +53,7 @@
 		"sass": "^1.72.0",
 		"sass-loader": "^14.1.1",
 		"style-loader": "^3.3.4",
+		"svgo": "^3.2.0",
 		"terser-webpack-plugin": "^5.3.10",
 		"webpack": "^5.91.0",
 		"webpack-cli": "^5.1.4",
