--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"main": "main.js",
 	"scripts": {
 		"start": "webpack serve --mode development",
-		"build:dev": "webpack --mode development --progress",
-		"build:prod": "webpack --mode production --progress"
+		"build:dev": "webpack --mode development",
+		"build:prod": "webpack --mode production"
 	},
 	"repository": {
 		"type": "git",
@@ -37,6 +37,7 @@
 		"clean-webpack-plugin": "^4.0.0",
 		"css-loader": "^6.10.0",
 		"css-minimizer-webpack-plugin": "^6.0.0",
+		"dotenv-webpack": "^8.1.0",
 		"html-loader": "^5.0.0",
 		"html-webpack-plugin": "^5.6.0",
 		"image-minimizer-webpack-plugin": "^4.0.0",
