--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,8 @@ jobs:
 
       - name: Install deps & build
         run: npm i && npm run build:prod
+        env:
+          API_PATH: ${{ env.API_PATH }}
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
