--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,10 @@ jobs:
         uses: actions/configure-pages@v5
 
       - name: Install deps & build
-        run: npm i && npm run build:prod
+        run: |
+          touch .env
+          echo API_URL=API_URL >> .env
+          npm i && npm run build:prod
         env:
           API_URL: ${{ vars.API_URL }}
 
